[package]
name = "erlang-cozodb"
description = "Erlang bindings for CozoDB"
authors = ["Alejandro M. Ramallo"]
version = "0.1.0"
edition = "2021"

[lib]
name = "cozodb"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = {version = "0.33.0", features = ["nif_version_2_17"]}
# cozo = "0.7.6"
cozo = {git = "https://github.com/aramallo/cozo.git", tag = "augoor-1.6" }
uuid = "1.3.3"
threadpool = "1.8.1"
once_cell = "1.18.0"
num_cpus = "1.0"

# >>>>>> Same as cozo
ndarray = "0.15.6"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
serde_derive = "1.0.199"
lazy_static = "1.4.0"
crossbeam = "0.8.4"
# <<<<<<<

[features]
default = [
    "cozo/storage-sqlite",
    "cozo/storage-rocksdb",
    "cozo/io-uring", # Enables io-uring option for the RocksDB storage
    "cozo/graph-algo"
]
