[package]
name = "erlang-cozodb"
description = "Erlang bindings for CozoDB"
authors = ["Alejandro M. Ramallo"]
version = "0.1.0"
edition = "2021"

[lib]
name = "cozodb"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = {version = "0.36.2", features = ["nif_version_2_17"]}
cozo = {git = "https://github.com/aramallo/cozo.git", branch = "main" }
uuid = "1.3.3"
threadpool = "1.8.1"
once_cell = "1.21.3"
num_cpus = "1.17.0"

# ==============================================================================
# Pin the following to match cozo's working version
graph = "=0.3.1"  # uses graph_builder 0.4.0
graph_builder = "=0.4.0"  # uses rayon 1.10.0
rayon = "=1.10.0"
ndarray = "0.15.6"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
serde_derive = "1.0.199"
lazy_static = "1.4.0"
crossbeam = "0.8.4"
# ==============================================================================

[features]
default = [
    "cozo/storage-sqlite",
    "cozo/storage-rocksdb",
    "cozo/graph-algo"
]

[target.'cfg(target_os = "linux")'.dependencies]
cozo = {git = "https://github.com/aramallo/cozo.git", branch = "main", features = ["io-uring"]}

