[package]
name = "ecozodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ecozodb"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = {version = "0.29.0", features = ["nif_version_2_16"]}
cozo = "0.7.2"
serde = { version = "1.0.137" }
serde_derive  = { version = "1.0.137" }
# serde_rustler = {git = "https://github.com/leapsight/serde_rustler.git", branch = "master"}
serde_rustler = { path = "../../../serde_rustler/serde_rustler" }